debugging an issue with search input causing layout break on small sizes - galaxy Z Fold 5 in specific

--- a/client/vite-project/src/components/search/Search.module.scss
+++ b/client/vite-project/src/components/search/Search.module.scss
@@ -1,7 +1,9 @@
 .search__form {
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin: 4rem 0;
+    gap: .5rem;
 }
 
 .input__wrapper {
@@ -23,6 +25,7 @@
     padding: .3rem 1.7rem .3rem .6rem;
     outline: none;
     border: 1px solid lightblue;
+    font-size: 1.5rem;
 
     &::placeholder {
         font-size: .9rem;
@@ -56,4 +59,11 @@
     align-self: center;
     padding-right: .5rem;
     cursor: pointer;
+}
+
+@media (max-width: 350px) {
+    // TODO: debug this. It's better to make input responsive and reduce width of parent
+    .search__input {
+        width: 200px;
+    }
 }
